# GLP

./: .gitignore  .pre-commit-config.yaml  HospitalWaitingTime.py  Hospital_waiting_time.ipynb  Indurance_Premium_Calculation.ipynb  NariProjectTest.py  README.md  TATChemo.py  TAT_chemo_example.ipynb  paper.bib  paper.md  pyproject.toml  simple_demo.py
.github/workflows/: ci.yml  draft-pdf  draft-pdf.yml  generate-pdf.yml
docs/source/: conf.py  glp.rst  index.rst  modules.rst
src/glp/: constraint.py  core.py  core_with_bigM.py  enums.py  goal.py
tests/: test_core.py
tests/Additional_Data/Waiting_time_data/: README.md
